# GABBE

./: .gitignore  CHANGELOG.md  CLI-REFERENCE.md  CONTRIBUTING.md  QUICK_COMMANDS.md  QUICK_GUIDE.md  README.md  README_FULL.md  TASKS.md  env  init.py  pyproject.toml
.agents/: AGENTS.md  CONSTITUTION.md  setup-context.sh
.agents/guides/: actor-agent-frameworks.md  ai-agentic.md  c-sharp.md  java.md  js-ts-nodejs.md  knowledge-integration.md  multi-agent-systems.md  php-laravel.md  rust.md  self-healing-summary.md  strategic-analysis.md  troubleshooting-guide.md
.agents/loki/: RARV_CYCLE.md  README.md  brain-mode.skill.md  loki-mode.skill.md
.agents/scripts/: compile_skills.py  setup-context.ps1  setup-context.sh  validate_integrity.py  validate_links.py  verify_setup_simulation.py
.agents/skills/: 00-index.md  loki
.agents/templates/: 00-index.md
.gabbe/: state.db
.github/workflows/: ci.yml
agents/: AGENTS.md  CONSTITUTION.md
docs/: CLI-REFERENCE.md  CLI_REFERENCE.md  MCP_CONFIGURATIONS.md  PLATFORM_CONTROLS.md  QUICK_COMMANDS.md  QUICK_GUIDE.md  README_FULL.md  VERIFICATION_GUIDE.md
gabbe/: __init__.py  audit.py  brain.py  budget.py  config.py  context.py  database.py  escalation.py  forecast.py  llm.py  main.py  mcp_server.py  policy.py  replay.py  route.py  status.py  sync.py  verify.py
scripts/: init.py
tests/: conftest.py  test_brain.py  test_config.py  test_database.py  test_e2e.py  test_llm_backoff.py  test_llm_retries.py  test_main.py  test_route.py  test_sync.py  test_sync_fallback.py  test_sync_markers.py  test_verify.py
(+257 files in other folders)
